--- a/_config.yml
+++ b/_config.yml
@@ -64,8 +64,8 @@ topbar_color                              : "#000000"
 topbar_transparency                       : 0.1
 topbar_title_color                        : "#ffffff"
 
-cover_image                               : assets/header-water.jpg                    # Replace with alternative image path or image URL.
-cover_overlay_color                       : "#363b3d"
+cover_image                               : assets/plants.jpg                    # Replace with alternative image path or image URL.
+cover_overlay_color                       : "#4379D3"
 cover_overlay_transparency                : 0.8
 
 device_color                              : white                                     # Set to: blue, black, yellow, coral or white.
