--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ presskit_download_link                    :                                     
 
 app_icon                                  : assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  : Ask Yourself Everyday                     # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_price                                 : Free                                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
+app_price                                 :                                       # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_description                           : Track any aspect of your life
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
@@ -64,8 +64,8 @@ topbar_color                              : "#000000"
 topbar_transparency                       : 0.1
 topbar_title_color                        : "#ffffff"
 
-cover_image                               : assets/plants.jpg                    # Replace with alternative image path or image URL.
-cover_overlay_color                       : "#4379D3"
+cover_image                               : assets/header-water.jpg                    # Replace with alternative image path or image URL.
+cover_overlay_color                       : "#363b3d"
 cover_overlay_transparency                : 0.8
 
 device_color                              : white                                     # Set to: blue, black, yellow, coral or white.
