--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ presskit_download_link                    :                                     
 app_icon                                  : assets/appicon.png                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter path to icon file manually.
 app_name                                  : Ask Yourself Everyday                     # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
 app_price                                 : Free                                      # Automatically populates if not set and if iOS app ID is set.  Otherwise enter manually.
-app_description                           : Track any aspect of your life
+app_description                           : Like a mood tracker, but for everything
 
 enable_smart_app_banner                   : true                                      # Set to true to show a smart app banner at top of page on mobile devices.
 
@@ -22,8 +22,8 @@ enable_smart_app_banner                   : true                                
 # Information About Yourself
 your_name                                 : Oleg Dreyman                                
 your_link                                 : https://dreyman.dev                     
-your_city                                 : Kyiv                                
-email_address                             : oleg@dreyman.dev
+your_city                                 :                                 
+email_address                             : team@askyourself.app
 facebook_username                         :                                           
 instagram_username                        : 
 twitter_username                          : askyourselfapp
