--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ page_title                                : Ask Yourself Everyday               
 ios_app_id                                : 1531322948                                # Required. Enter iOS app ID to automatically populate name, price and icons (e.g. 718043190).
 
 testflight_link                           : 
-appstore_link                             : https://apps.apple.com/us/app/ask-yourself-everyday/id1531322948#?platform=iphone                                          # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
+appstore_link                             : https://apps.apple.com/app/apple-store/id1531322948?pt=118641704&ct=landing&mt=8&platform=iphone                                          # Automatically populates if not set and if iOS app ID is set. Otherwise enter manually.
 playstore_link                            :                                           # Enter Google Play Store URL.
 presskit_download_link                    :                                           # Enter a link to downloadable file or (e.g. public Dropbox link to a .zip file). 
                                                                                       # Or upload your press kit file to assets and set path accordingly (e.g. "assets/your_press_kit.zip").
